cmake_minimum_required(VERSION 3.8)
project(esp_joystick_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# ------------------------------------------------------------------------------
# Find dependencies
# ------------------------------------------------------------------------------
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)      
find_package(builtin_interfaces REQUIRED)

# ------------------------------------------------------------------------------
# Message files
# ------------------------------------------------------------------------------
set(msg_files
  "msg/JoystickInfo.msg"
)

# ------------------------------------------------------------------------------
# Generate interfaces (CRITICAL PART)
# ------------------------------------------------------------------------------
rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  DEPENDENCIES builtin_interfaces std_msgs
)

# ------------------------------------------------------------------------------
# Export dependencies for Python
# ------------------------------------------------------------------------------
ament_export_dependencies(rosidl_default_runtime)

ament_package()
